# class-app-backend

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05ccc505481e_fix_note_teacher_id_fkey.py  2ca9432c7e18_add_assignments_and_submissions_tables.py  2f88a38e6db2_add_livekit_room_fields_to_class_.py  460ebb5c8d86_add_started_and_ended_at_columns_to_.py  51eac706df72_create_classrooms_table.py  59b3d564c3d5_merge_heads.py  6d3dd31ae4ca_add_session_participants.py  723decf01196_add_timezone_to_started_at_and_ended_at.py  811302a918f3_make_relationship_to_teacher_in_notes.py  8338416754ce_initial_schema.py  99b5908d6a76_add_remember_token_to_user.py  bcf720799318_add_session_participants.py  be82f05ab14f_fix_note_teacher_id_fkey.py  c192c85126f0_add_notice_reads.py  d8e32a9f241b_make_teacher_id_nullable_in_courses.py  e62843dccff5_initial_migration.py  f20dcd7a8084_create_notes_table.py  ff821e9cc1e1_add_session_participants.py
app/: database.py  dependencies.py  main.py
app/core/: cloudinary.py  config.py  email.py  otp.py  security.py
app/models/: __init__.py  assignment.py  attendance_record.py  class_session.py  classcourse.py  classroom.py  course.py  note.py  notice.py  notice_read.py  session_participant.py  student.py  teacher.py  user.py
app/routers/: admin.py  assignment.py  attendance.py  auth.py  classcourse.py  classroom.py  course.py  note.py  notes.py  notice.py  profile.py  student.py  student_self.py  teacher.py  teacher_self.py
tests/: conftest.py  test_manager.py  test_notices.py
(+16 files in other folders)
