[project]
name = "class-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
