[project]
name = "class-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "pydantic-settings>=2.14.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "cloudinary>=1.45.0",
    "livekit>=1.1.13",
    "livekit-api>=1.2.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
